--- a/index.html
+++ b/index.html
@@ -443,12 +443,15 @@
 					<a href="https://www.wolfram.com/language/"><img src="images/sponsors/wolfram-language.png" alt="wolfram-language" style="width: 200px;"></a>
 					<a href="https://gen.xyz/" target="_blank"><img src="images/sponsors/gen.xyz.png" alt="gen.xyz" style="width: 200px;"></a>
 					<a href="https://1password.com/" target="_blank"><img src="images/sponsors/one-password.png" alt="one-password" style="width: 200px;"></a>
-					<a href="http://horuson.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/horuson.png" style="width: 200px;" alt="horuson"></a>
 				</div><br><br>
 				<div class="patrons">
 					<a href="https://interviewbuddy.in/" target="_blank"><img src="images/sponsors/interview-buddy.png" alt="interview-buddy" style="width: 200px;"></a>
 					<a href="http://www.globalcert.cloud" target="_blank"><img src="images/sponsors/global-cert.png" alt="global-cert" style="width: 200px;"></a>
 					<a href="https://www.axure.com/" target="_blank"><img src="images/sponsors/axure.png" alt="axure" style="width: 200px;" /></a>
+				</div><br><br>
+				<div class="patrons">
+					<a href="https://horuson.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/horuson.png" style="width: 200px;" alt="horuson"></a>
+					<a href="https://twitter.com/Web3Panjab" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/Web3panjab.png" style="width: 200px;" alt="Web3Panjab"></a>
 					<a href="https://www.elearnmarkets.com/" target="_blank"><img src="images/sponsors/elearnmarkets.png" alt="elearnmarkets" style="width: 300px;"></a>
 				</div><br><hr><br>
 				<h4 style="color:white; text-align:center;">Interested in sponsoring us?</h4><br><br>
