--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 						</style>
 						<div class="one_half last" style="width: auto">
 							<div id="register-buttons">
-								<a href="https://bit.ly/techacks3" target="_blank" class="bn5"
+								<a href="https://bit.ly/thCommunity" target="_blank" class="bn5"
 									>Join Discord</a
 								>
 							</div><br><br>
