--- a/index.html
+++ b/index.html
@@ -534,6 +534,16 @@
 								</div>
 							</details>
 							<details>
+								<summary>What happens if I am not selected in the preliminary round?</summary>
+								<div class="faq__content">
+									<p>
+										Do not worry if you are not selected! You can STILL submit your solution and
+										be eligible for our sponsored prizes! However, you may not get one-to-one
+										session with mentors, or a chance to make a pitch to the judges.
+									</p>
+								</div>
+							</details>
+							<details>
 								<summary>How do I reach Chitkara University?</summary>
 								<div class="faq__content">
 									<p>
