--- a/index.html
+++ b/index.html
@@ -401,7 +401,6 @@
 				<div class="patrons">
 					<a href="https://devfolio.co/"><img src="images/sponsors/devfolio.png" alt="devfolio" style="width: 400px;"></a>
 					<a href="https://polygon.technology/"><img src="images/sponsors/polygon.png" alt="polygon"  style="width: 400px;"></a>
-					
 				</div><br><br>
 				<hr>
 				<h1 style="color: white; text-align: center; padding: 5%">
@@ -409,6 +408,7 @@
 				</h1>	
 				<div class="patrons">
 					<a href="https://fossunited.org/" target="_blank"><img src="images/sponsors/foss-united.png" alt="foss-united" style="width: 150px;"></a>
+					<a href="https://spheron.network/"><img src="images/spheron.png" alt="spheron"  style="width: 150px;"></a>					
 				</div><br><br>
 						<hr>
 				<h1 style="color: white; text-align: center; padding: 5%">
@@ -418,7 +418,11 @@
 					<a href="https://www.solana.com/" target="_blank"><img src="images/sponsors/solana.png" alt="solana" style="width: 200px;"></a>
 					<a href="https://www.filecoin.com/" target="_blank"><img src="images/sponsors/filecoin.png" alt="filecoin" style="width: 200px;"></a>
 					<a href="https://www.replit.com/" target="_blank"><img src="images/sponsors/replit.png" alt="replit" style="width: 200px;"></a>
-					
+				</div><br><br>
+				<div class="patrons">
+					<a href="https://www.hoverrobotix.com/" target="_blank"><img src="images/hoverrobotix.png" alt="hoverrobotix" style="width: 200px;"></a>
+					<a href="https://www.mentor-x.com/" target="_blank"><img src="images/mentor-x.png" alt="mentor-x" style="width: 200px;"></a>
+					<a href="https://www.revup.in/" target="_blank"><img src="images/revup.png" alt="revup" style="width: 200px;"></a>
 				</div><br><br>
 				<hr>
 				<h1 style="color: white; text-align: center; padding: 5%">
