--- a/index.html
+++ b/index.html
@@ -415,11 +415,14 @@
 					Silver Sponsors
 				</h1>
 				<div class="patrons">
-					<a href="https://www.solana.com/" target="_blank"><img src="images/sponsors/solana.png" alt="solana" style="width: 200px;"></a>
+					<a href="https://www.solana.com/" target="_blank"><img src="images/sponsors/solana.png" alt="solana" style="width: 100px;"></a>
 					<a href="https://www.filecoin.com/" target="_blank"><img src="images/sponsors/filecoin.png" alt="filecoin" style="width: 200px;"></a>
 					<a href="https://www.replit.com/" target="_blank"><img src="images/sponsors/replit.png" alt="replit" style="width: 200px;"></a>
-					
-				</div><br><br>
+					<a href="https://www.geeksforgeeks.org/" target="_blank"><img src="images/sponsors/geeksforgeeks.png" alt="replit" style="width: 100px;"></a>	
+					<a href="https://elevateservices.com/" target="_blank"><img src="images/sponsors/elevateservices.png" alt="replit" style="width: 120px;"></a>	
+					<a href="https://www.lumoslabs.co/" target="_blank"><img src="images/sponsors/lumos.jfif" alt="replit" style="width: 120px;"></a>	
+				</div>
+				<br><br>
 				<hr>
 				<h1 style="color: white; text-align: center; padding: 5%">
 					Community Partners
@@ -434,24 +437,24 @@
 					Value Addition Partners
 				</h1>
 				<div class="patrons">
-                                        <a href="https://taskade.com/"><img src="images/sponsors/taskade.png" alt="taskade" style="width: 120px;"></a>
-					<a href="https://www.echo3d.co/"><img src="images/sponsors/echo-3d.png" alt="echo-3d" style="width: 200px;"></a>
-					<a href="https://balsamiq.com/"><img src="images/sponsors/balasmiq.png" alt="balasmiq" style="width: 200px;"></a>
-					<a href="http://www.colorib.com" target="_blank"><img src="images/sponsors/colorlib.png" alt="colorib" style="width: 200px;"></a>
+                    <a href="https://taskade.com/"><img src="images/sponsors/taskade.png" alt="taskade" style="width: 70px;"></a>
+					<a href="https://www.echo3d.co/"><img src="images/sponsors/echo-3d.png" alt="echo-3d" style="width: 100px;"></a>
+					<a href="https://balsamiq.com/"><img src="images/sponsors/balasmiq.png" alt="balasmiq" style="width: 100px;"></a>
+					<a href="http://www.colorib.com" target="_blank"><img src="images/sponsors/colorlib.png" alt="colorib" style="width: 100px;"></a>
 				</div><br><br>
 				<div class="patrons">
-					<a href="https://www.wolfram.com/language/"><img src="images/sponsors/wolfram-language.png" alt="wolfram-language" style="width: 200px;"></a>
-					<a href="https://gen.xyz/" target="_blank"><img src="images/sponsors/gen.xyz.png" alt="gen.xyz" style="width: 200px;"></a>
-					<a href="https://1password.com/" target="_blank"><img src="images/sponsors/one-password.png" alt="one-password" style="width: 200px;"></a>
+					<a href="https://www.wolfram.com/language/"><img src="images/sponsors/wolfram-language.png" alt="wolfram-language" style="width: 100px;"></a>
+					<a href="https://gen.xyz/" target="_blank"><img src="images/sponsors/gen.xyz.png" alt="gen.xyz" style="width: 100px;"></a>
+					<a href="https://1password.com/" target="_blank"><img src="images/sponsors/one-password.png" alt="one-password" style="width: 100px;"></a>
 				</div><br><br>
 				<div class="patrons">
-					<a href="https://interviewbuddy.in/" target="_blank"><img src="images/sponsors/interview-buddy.png" alt="interview-buddy" style="width: 200px;"></a>
-					<a href="http://www.globalcert.cloud" target="_blank"><img src="images/sponsors/global-cert.png" alt="global-cert" style="width: 200px;"></a>
-					<a href="https://www.axure.com/" target="_blank"><img src="images/sponsors/axure.png" alt="axure" style="width: 200px;" /></a>
+					<a href="https://interviewbuddy.in/" target="_blank"><img src="images/sponsors/interview-buddy.png" alt="interview-buddy" style="width: 100px;"></a>
+					<a href="http://www.globalcert.cloud" target="_blank"><img src="images/sponsors/global-cert.png" alt="global-cert" style="width: 100px;"></a>
+					<a href="https://www.axure.com/" target="_blank"><img src="images/sponsors/axure.png" alt="axure" style="width: 100px;" /></a>
 				</div><br><br>
 				<div class="patrons">
-					<a href="https://horuson.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/horuson.png" style="width: 200px;" alt="horuson"></a>
-					<a href="https://twitter.com/Web3Panjab" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/Web3panjab.png" style="width: 200px;" alt="Web3Panjab"></a>
+					<a href="https://horuson.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/horuson.png" style="width: 100px;" alt="horuson"></a>
+					<a href="https://twitter.com/Web3Panjab" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/Web3panjab.png" style="width: 100px;" alt="Web3Panjab"></a>
 					<a href="https://www.elearnmarkets.com/" target="_blank"><img src="images/sponsors/elearnmarkets.png" alt="elearnmarkets" style="width: 300px;"></a>
 				</div><br><hr><br>
 				<h4 style="color:white; text-align:center;">Interested in sponsoring us?</h4><br><br>
@@ -479,6 +482,14 @@
 				<div class="section-content-holder left">
 					<div class="content-wrapper">
 						<main>
+							<details>
+								<summary>What if we are not selected?</summary>
+								<div class="faq__content">
+									<p>
+										Even those teams that are not selected can make their submission to be eligible for sponsored prizes.
+									</p>
+								</div>
+							</details>
 							<details>
 								<summary>Is the event online or offline?</summary>
 								<div class="faq__content">
