--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 				</h1>
 					<div class="patrons">
 					<a href="https://www.geeksforgeeks.org/" target="_blank"><img src="images/sponsors/geeksforgeeks.png" alt="replit" style="width: 100px;"></a>	
-					<a href="https://elevateservices.com/" target="_blank"><img src="images/sponsors/elevateservices.png" alt="replit" style="width: 120px;"></a>	
+					<a href="https://elevateservices.com/" target="_blank"><img src="images/sponsors/elevate.jfif" alt="replit" style="width: 120px;"></a>	
 					<a href="https://www.lumoslabs.co/" target="_blank"><img src="images/sponsors/lumos.jfif" alt="replit" style="width: 120px;"></a>	
 				</div>
 				<br>
