tezos sponser added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&display=swap" rel="stylesheet">
 	</head>
 	<body>
+
                 <!-- <style></style>
                 <table class="doc-loader"> /Preloader
 			<tr>
@@ -430,6 +431,11 @@
 					<a href="https://www.solana.com/" target="_blank"><img src="images/sponsors/solana.png" alt="solana" style="width: 100px;"></a>
 					<a href="https://www.filecoin.com/" target="_blank"><img src="images/sponsors/filecoin.png" alt="filecoin" style="width: 200px;"></a>
 					<a href="https://www.replit.com/" target="_blank"><img src="images/sponsors/replit.png" alt="replit" style="width: 200px;"></a>
+				</div>
+				<br>
+				<div class="patrons">
+					<a href="https://tezosindia.org.in/" target="_blank"><img src="images/sponsors/tezos.png" alt="solana" style="width: 200px;"></a>
+					
 				</div><br><br>
 				<hr>
 				<h1 style="color: white; text-align: center; padding: 5%">
