--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				   <h1 style="color:white;">Think • Innovate • Create</h1>
 				<!-- ^ class="big-title" -->
 				<p style="text-align: center; color: white; font-size: 25px;">
-					Hybrid Mode | D-Day: 27th December 2022 | Finale: 6th & 7th January 2023
+					Hybrid Mode | D-Day: 27th December 2022 | Finale: 5th - 7th January 2023
 				</p>
 				<br /><br />
 				<a href="#register" class="bn5"
@@ -225,14 +225,7 @@
 					<div class="clear"></div>
 					</div>
 				</div>
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<img src="images/timeline.png" style="max-width:100%" alt="timeline">
-				</div>
-			</div>
-		</div>
-
+		
 
 		<!-- News -->
 		<div id="about" class="section">
@@ -375,7 +368,7 @@
 								data-style="circles"
 								data-timezone="Asia/Kolkata"
 								data-textcolor="#031428"
-								data-date="2022-12-27 18:00"
+								data-date="2023-01-05 14:00"
 								data-background="#000082"
 								data-digitscolor="#000000"
 								data-unitscolor="#000082"
