--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 								/>
 
 								<h3 style="padding-bottom: 0">
-									Industry and IoT Technologies
+									Industry 5.0 Technology
 								</h3>
 
 								<h6>Dr. Amit Kumar</h6>
@@ -279,8 +279,7 @@
 							</div>
 						</div>
 					</div>
-					<hr>
-					<p style="padding-left: 60px;">More coming soon...</p>
+					<p style="padding-left: 60px;"></p>
 				</div>
 				<div class="clear"></div>
 			</div>
